--- a/templates/entreprise/modifEnt.html.twig
+++ b/templates/entreprise/modifEnt.html.twig
@@ -31,63 +31,63 @@
         <div class="form-row  mb-3">
           <label for="firstnameModif" class="col-form-label col-4">Prénom</label>
           <div for="firstnameModif" class="col-8">
-            <input type="text" name="firstnameModif" id="firstnameModif" class="form-control" value="{{ app.user.firstname }}" placeholder="Prénom">
+            <input type="text" name="firstnameModif" id="firstnameModif" class="form-control" value="{{ ficheEntUpdate.firstname }}" placeholder="Prénom">
           </div>
         </div>
 
         <div class="form-row  mb-3">
           <label for="lastnameModif" class="col-form-label col-4">Nom</label>
           <div for="lastnameModif" class="col-8">
-            <input type="text" name="lastnameModif" id="lastnameModif" class="form-control" value="{{ app.user.lastname }}" placeholder="Nom">
+            <input type="text" name="lastnameModif" id="lastnameModif" class="form-control" value="{{ ficheEntUpdate.lastname }}" placeholder="Nom">
           </div>
         </div>
 
         <div class="form-row  mb-3">
           <label for="addressModif" class="col-form-label col-4">Adresse</label>
           <div for="addressModif" class="col-8">
-            <input type="text" name="addressModif" id="addressModif" class="form-control" value="{{ app.user.address }}" placeholder="Adresse">
+            <input type="text" name="addressModif" id="addressModif" class="form-control" value="{{ ficheEntUpdate.address }}" placeholder="Adresse">
           </div>
         </div>
 
         <div class="form-row  mb-3">
           <label for="zipcodeModif" class="col-form-label col-4">Code Postal</label>
           <div for="zipcodeModif" class="col-8">
-            <input type="text" name="zipcodeModif" id="zipcodeModif" class="form-control" value="{{ app.user.zipcode }}" placeholder="Code Postal">
+            <input type="text" name="zipcodeModif" id="zipcodeModif" class="form-control" value="{{ ficheEntUpdate.zipcode }}" placeholder="Code Postal">
           </div>
         </div>
 
         <div class="form-row  mb-3">
           <label for="cityModif" class="col-form-label col-4">Ville</label>
           <div for="cityModif" class="col-8">
-            <input type="text" name="cityModif" id="cityModif" class="form-control" value="{{ app.user.city }}" placeholder="Ville">
+            <input type="text" name="cityModif" id="cityModif" class="form-control" value="{{ ficheEntUpdate.city }}" placeholder="Ville">
           </div>
         </div>
 
         <div class="form-row  mb-3">
           <label for="phoneModif" class="col-form-label col-4">Téléphone</label>
           <div for="phoneModif" class="col-8">
-            <input type="phone" name="phoneModif" id="phoneModif" class="form-control" value="{{ app.user.phone }}" placeholder="Téléphone">
+            <input type="phone" name="phoneModif" id="phoneModif" class="form-control" value="{{ ficheEntUpdate.phone }}" placeholder="Téléphone">
           </div>
         </div>
 
         <div class="form-row  mb-3">
           <label for="emailModif" class="col-form-label col-4">Email</label>
           <div for="emailModif" class="col-8">
-            <input type="email" name="emailModif" id="emailModif" class="form-control" value="{{ app.user.email }}" placeholder="Email">
+            <input type="email" name="emailModif" id="emailModif" class="form-control" value="{{ ficheEntUpdate.email }}" placeholder="Email">
           </div>
         </div>
 
         <div class="form-row  mb-3">
           <label for="webModif" class="col-form-label col-4">Site Web</label>
           <div for="webModif" class="col-8">
-            <input type="text" name="webModif" id="webModif" class="form-control" value="{{ app.user.web }}" placeholder="Site Web">
+            <input type="text" name="webModif" id="webModif" class="form-control" value="{{ ficheEntUpdate.web }}" placeholder="Site Web">
           </div>
         </div>
 
         <div class="form-row  mb-3">
           <label for="githubModif" class="col-form-label col-4">Site Github</label>
           <div for="githubModif" class="col-8">
-            <input type="text" name="githubModif" id="githubModif" class="form-control" value="{{ app.user.github }}" placeholder="Site Github">
+            <input type="text" name="githubModif" id="githubModif" class="form-control" value="{{ ficheEntUpdate.github }}" placeholder="Site Github">
           </div>
         </div>
 
