Modif input Checkbox
Vérification de la checkbox dans sa value. A revoir!!!!

--- a/templates/entreprise/view.html.twig
+++ b/templates/entreprise/view.html.twig
@@ -97,7 +97,7 @@
                   <td>
                     <form method="post">
                       <div class="custom-control custom-switch">
-                        <input type="checkbox" name="allow_contact" class="custom-control-input" id="switchAccept">
+                        <input type="checkbox" name="allow_contact" class="custom-control-input" id="switchAccept" value="">
                         <label class="custom-control-label" for="switchAccept"></label>
                       </div>
                     </form>
