--- a/templates/school/listEnt.html.twig
+++ b/templates/school/listEnt.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
 
-<a class="btn btn-warning m-3 rounded-0" href="{{ path('index') }}" class="text-info">Retour</a>
+<a class="btn btn-warning m-3 rounded-0" href="{{ path('index_school') }}" class="text-info">Retour</a>
 
 
 <div class="container-fluid  my-5">
