--- a/templates/admin/addSchool.html.twig
+++ b/templates/admin/addSchool.html.twig
@@ -26,6 +26,7 @@
               </div>
             </div>
             <hr>
+            {#
             <div class="form-row mb-3  ">
               <label for="adress_pro" class="col-form-label col-4">Adresse</label>
               <div class="col-8">
@@ -44,32 +45,32 @@
                 <input type="text" name="city_pro" id="city_pro" class="form-control" placeholder="Ville">
               </div>
             </div>
-            <hr>
+            <hr>#}
             <div class="form-row mb-3  ">
-              <label for="phone_pro" class="col-form-label col-4">Téléphone</label>
+              <label for="phonePro" class="col-form-label col-4">Téléphone</label>
               <div class="col-8">
-                <input type="text" name="phone_pro" id="phone_pro" class="form-control" placeholder="Téléphone">
+                <input type="phone" name="phonePro" id="phonePro" class="form-control" placeholder="Téléphone">
               </div>
             </div>
             <hr>
             <div class="form-row mb-3  ">
-              <label for="email_pro" class="col-form-label col-4">Email</label>
+              <label for="emailPro" class="col-form-label col-4">Email</label>
               <div class="col-8">
-                <input type="text" name="email_pro" id="email_pro" class="form-control" placeholder="Votre email">
+                <input type="email" name="emailPro" id="emailPro" class="form-control" placeholder="Votre email">
               </div>
             </div>
             <hr>
             <div class="form-row mb-3  ">
-              <label for="web_pro" class="col-form-label col-4">Site Web</label>
+              <label for="webPro" class="col-form-label col-4">Site Web</label>
               <div class="col-8">
-                <input type="text" name="web_pro" id="web_pro" class="form-control" placeholder="Site Web">
+                <input type="text" name="webPro" id="webPro" class="form-control" placeholder="Site Web">
               </div>
             </div>
             <hr>
             <div class="form-row mb-3  ">
-              <label for="siret" class="col-form-label col-4">N° SIRET</label>
+              <label for="num_siret" class="col-form-label col-4">N° SIRET</label>
               <div class="col-8">
-                <input type="text" name="siret" id="siret" class="form-control" placeholder="N° de SIRET">
+                <input type="text" name="num_siret" id="num_siret" class="form-control" placeholder="N° de SIRET">
                 <small id="" class="form-text text-muted">14 chiffres sans espace</small>
               </div>
             </div>
@@ -107,6 +108,21 @@
             </div>
             <hr>
 
+            <input type="hidden" class="form-control" name="siret" id="siret">
+            <input type="hidden" class="form-control" name="sirene_code_ape" id="sirene_code_ape">
+            <input type="hidden" class="form-control" name="siren" id="siren" value=>
+            <input type="hidden" class="form-control" name="nic" id="nic">
+            <input type="hidden" class="form-control" name="adresse" id="adresse">
+            <input type="hidden" class="form-control" name="codepostal" id="codepostal">
+            <input type="hidden" class="form-control" name="commune" id="commune">
+            <input type="hidden" class="form-control" name="departement" id="departement">
+            <input type="hidden" class="form-control" name="codedepartement" id="codedepartement">
+            <input type="hidden" class="form-control" name="region" id="region">
+            <input type="hidden" class="form-control" name="activite" id="activite">
+            <input type="hidden" class="form-control" name="commune" id="commune">
+            <input type="hidden" class="form-control" name="denomination" id="denomination">
+            <input type="hidden" class="form-control" name="groupeent" id="groupeent">
+
             <div class="text-center">
               <button type="submit" class="btn btn-outline-success  m-3 rounded-0">Inscription </button>
             </div>
@@ -120,4 +136,100 @@
 
 
 {% endblock %}
+{% block javascripts %}
+<script>
+$(document).ready(function(){
+  $('#num_siret').change(function(e){
 
+    var numSiretSaisi = $(this).val();
+
+    if(numSiretSaisi.length >= 9){
+      // Je fais appel à l'API
+      var urlApi = 'https://data.opendatasoft.com/api/records/1.0/search/?dataset=sirene_v3%40public&q='+numSiretSaisi+'&lang=fr&start=0&sort=datederniertraitementetablissement&facet=activiteprincipaleetablissement&facet=siret&facet=siren&facet=nic&facet=adresseetablissement&facet=codepostaletablissement&facet=codecommuneetablissement&facet=libellecommuneetablissement&facet=l1_adressage_unitelegale&facet=denominationunitelegale&facet=departementetablissement&facet=regionetablissement&facet=divisionunitelegale&facet=codedepartementetablissement&facet=classeunitelegale';
+
+      fetch(urlApi)
+      .then(function(result){
+        // Récupération des résultat
+        return result.json();
+      })
+      .then(function(data){
+        console.log(data);
+
+        // sortir les données par date du dernier établissement ("sort": ["datederniertraitementetablissement"])
+
+        // nhits represente (dans cette api) le nombre de résultat
+        if(data.nhits >= 1){
+
+          for(myRecords of data.records){
+            code_ape = myRecords.fields.activiteprincipaleetablissement; // APE
+            $('#sirene_code_ape').val(code_ape);
+            console.log($('#sirene_code_ape').val(code_ape));
+
+            siret = myRecords.fields.siretsiegeunitelegale;
+            $('#siret').val(siret);
+            console.log($('#siret').val(siret));
+
+            siren = myRecords.fields.siren;
+            $('#siren').val(siren);
+            console.log($('#siren').val(siren));
+
+            nic = myRecords.fields.nic;
+            $('#nic').val(nic);
+            console.log($('#nic').val(nic));
+
+            adresse = myRecords.fields.adresseetablissement;
+            $('#adresse').val(adresse);
+            console.log($('#adresse').val(adresse));
+
+            codepostal = myRecords.fields.codepostaletablissement;
+            $('#codepostal').val(codepostal);
+            console.log($('#codepostal').val(codepostal));
+
+            codepostal2 = myRecords.fields.codecommuneetablissement;
+            $('#codepostal2').val(codepostal2);
+            console.log($('#codepostal2').val(codepostal2));
+
+            commune = myRecords.fields.libellecommuneetablissement;
+            $('#commune').val(commune);
+            console.log($('#commune').val(commune));
+
+            identity = myRecords.fields.l1_adressage_unitelegale;
+            $('#denomination').val(denomination);
+            console.log($('#denomination').val(denomination));
+
+            denomination2 = myRecords.fields.denominationunitelegale;
+            $('#denomination2').val(denomination2);
+            console.log($('#denomination2').val(denomination2));
+
+            departement = myRecords.fields.departementetablissement;
+            $('#departement').val(departement);
+            console.log($('#departement').val(departement));
+
+            region = myRecords.fields.regionetablissement;
+            $('#region').val(region);
+            console.log($('#region').val(region));
+
+            activite = myRecords.fields.divisionunitelegale;
+            $('#activite').val(activite);
+            console.log($('#activite').val(activite));
+
+            codedepartement = myRecords.fields.codedepartementetablissement;
+            $('#codedepartement').val(codedepartement);
+            console.log($('#codedepartement').val(codedepartement));
+
+            groupeent = myRecords.fields.classeunitelegale;
+            $('#groupeent').val(groupeent);
+            console.log($('#groupeent').val(groupeent));
+
+          }
+        }
+      });
+
+    }
+
+  })
+
+
+});
+</script>
+{% endblock %}
