--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -34,7 +34,7 @@
 
     {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+            You are logged in as {{ app.user.firstname }} {{ app.user.lastname }} , <a href="{{ path('app_logout') }}">Logout</a>
         </div>
     {% endif %}
 
